Ensure all options can be clicked on mobile nav

--- a/components/Nav/NavMobile/NavMobile.module.css
+++ b/components/Nav/NavMobile/NavMobile.module.css
@@ -50,7 +50,7 @@
 }
 
 .ul {
-  padding: 1rem;
+  padding: 1rem 1rem 5rem;
   margin: 0;
   list-style: none;
   overflow-y: auto;
